--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T40QBMYD00');
+</script>
+
   <meta charset="UTF-8">
   <title>About My Creators</title>
   <style>
@@ -31,28 +41,29 @@
 
   <div>
     <p class="member-content">
-      Early in the research process investigating archives and processes of preservation, it became clear archives were
-      not simply a neatly recorded past, but the process of preservation inevitably transforms what is being preserved.
-      During initial research we investigated the process of ‘preserving’ text as sound, developing a MaxMSP patch that
-      converted text to ASCII then to MIDI data. This was made possible on the website using tone.js. Our next challenge
-      was integrating this process with a visual element and making it happen in real-time generated from text the
-      website user inputs. It was eventually possible using P5 (an online-friendly version of the visual software
-      Processing), so the text not only generates sound but in turn creates the graphic you will see next to your
-      memory-text. The user’s memory has successfully been preserved, however totally transformed in the process.
+      Welcome to our open studio! We hope you enjoy the ride. For a step-by-step guide please go to the ‘Read Me’ page.
       <br /><br />
-      The visual and sonic aesthetic draws heavily from 80s sci-fi. We had also investigated the ageing process of
-      platforms and media (e.g. vinyl, tapes), and how this means the technology we have available to preserve greatly
-      affects how we view the past (from the perspective of the present/future), often corrupting it. Glitches have been
-      built in. Archives and their technology, in a way, are messages to the future, but their design and layout betray
-      their origins in the past, and they are limited (e.g. memory capacity, the fragility of media). The
-      techno-optimism, kitsch old-school video game feel makes the overall experience playful, a bit surreal, colourful,
-      and hints at time-travel.
+      We are DMSP Preservation team 2020, studying a Digital Media Studio Project module at the Edinburgh College of Art.
+      We came together from a variety of visual, sonic, and digital design backgrounds to explore the theme of ‘Preservation’
+      in the digital age. From the outset we were fascinated by the process of memory and the role of dreaming in the
+      formation of memory, and how much our memories are seemingly and endlessly recorded on social media platforms.
+      We developed the character, IAIN, who is the interface of an hypothetical archive in the future and who features
+      in the opening animation for the website. His role as the interface is not simply to record memories in a
+      straight forward way but he generates unique audio-visual pieces for each user depending on their memory-text.
 
     </p>
   </div>
+	<div class="sound-team">
+		<p>About Feedback Questuinnaire</p></div>
+	<div>
+		<p class="member-content">If you are interested in our website and would like to give us some feedback, let us know the direction of future progress, we will be very grateful！
+		<br /><br />
+			🌟Here is the URL of Questionnaire: <a style="color: pink;" href="https://s1821826.typeform.com/to/OSFqSR"> https://s1821826.typeform.com/to/OSFqSR</a>
+		</p>
+	</div>
 
   <div class="member-photo">
-    <p class="sound-team">Preservation Team - Sound Group</p>
+    <p class="sound-team">Preservation Team</p>
 
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
@@ -82,10 +93,6 @@
       </figcaption>
     </figure>
 
-
-
-
-    <p class="visual-team">Preservation Team - Visual Group</p>
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Chen" src="../img/photo/Chen.png" />
       <figcaption class="c4-layout-center-left">
@@ -107,13 +114,10 @@
       </figcaption>
     </figure>
 
-
-    <br>
-
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Wang" src="../img/photo/Wang.png" />
       <figcaption class="c4-layout-center-left">
-        <h1>Helping with text, concept development, and sound.</h1>
+        <h1>Doing some visual stuff like animation and framework for the website.</h1>
       </figcaption>
     </figure>
 
@@ -130,6 +134,11 @@
         <h1>Sound visualisation with p5 and help to build the front-end.</h1>
       </figcaption>
     </figure>
+
+<br>
+<br>
+<br>
+<br>
 
   </div>
   <!--Full page menu begin-->
@@ -186,6 +195,16 @@
             <div class="button-text-light">About My Creators</div>
           </div>
         </a>
+      </li>
+
+      <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Feedback Quetionnaire</div>
+          <a>
       </li>
     </ul>
   </div>
