--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T40QBMYD00');
+</script>
+
   <meta charset="UTF-8">
   <title>Read Me</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,14 +38,29 @@
 
   <div class="content-read-me">
     <div class="first-introduction" style="text-align: center;">
-      <h1 class="read-me-tittle">Read Me</h1>
-      <img class="hallucnation-gif" src="../img/gif/Preservation-Hallucination.gif" style="width:80vw;" />
+      <div class="read-me-tittle">Read Me</div>
+      <img class="hallucnation-gif" src="../img/gif/Preservation-Hallucination.gif" style="width:70vw;" />
       <p class="introduction-content">Welcome to the memory booth, my name is IAIN, <br>
         I am an archive of memory. I can preserve and transform <br>
-        your memories in a unique interactive way.</p>
+        your memories in a unique interactive way.<br><br>
+        Exploring the digital archive, you may feel you become lost in this immersive world,
+        populated with other people’s memories. But to become part of the archive and
+        part of this mental architecture your memories first need to be translated from human
+        language into code (AI language). This process generates sound and a unique moving
+        graphic. The result is disjointed, dreamlike, and unfamiliar to us. Dreams are part of how
+        we remember as humans. Imagine if, with the advent of AI, machines will not only be able
+        to think for themselves but to have a subconscious and dream as they process, learn
+        from, and remember the human world around them, you will begin to enter our world.
+
+
+
+
+
+
+      </p>
     </div>
     <div class="booth">
-      <img class="booth" src="../img/bg/memory-booth.png" style="width:50vw;" />
+      <img class="booth-img" src="../img/bg/memory-booth.png" style="width:50vw;" />
     </div>
     <div class="booth-text">
       <p class="booth-text1">Here's how it works...</p>
@@ -44,9 +69,10 @@
       <img class="path-illustration" src="../img/bg/road.png" style="width:60vw;" />
       <img class="step1-img" src="../img/bg/step.png" style="width:19vw;" />
       <p class="number1">1</p>
-      <img class="step1-column" src="../img/bg/column.png" style="width:50vw;" />
+      <img class="step1-column" src="../img/bg/column.png" style="width:38vw;" />
       <p class="name-word-text">Name<br><br><br>Childhood Travel Student Life Others<br><br><br><br>Enter your
         memories.....</p>
+      <img class="step1-go" src="../img/bg/go.png" style="width:14vw;" />
       <p class="name1-text">Firstly, you enter your name, memory<br> and the category of memory...</p>
     </div>
 
@@ -74,16 +100,29 @@
       <img class="step3-path-illustration" src="../img/bg/road.png" />
       <img class="step3-img" src="../img/bg/step.png" style="width:19vw;" />
       <p class="number3">3</p>
-      <img class="step3-archive" src="../img/bg/archive.png" style="width:60vw;" />
+      <img class="step3-archive" src="../img/bg/archive.png" style="width:30vw;" />
       <p class="step3-text1">Once I have processed it, you will then be able to choose
-        <br> whether you want me to preserve your memory or delete it.<br>
-        <br> If you choose to save it, it will be added to my memory archive.
-        <br> You can then access your unique memory and explore other people’s
-        <br> memories in the archive any time.</p>
+         whether you want me to preserve your memory or delete it.
+        If you choose to save it, it will be added to my memory archive.
+        You can then access your unique memory and explore other people’s
+        memories in the archive any time.</p>
     </div>
+
+    <div class="step4">
+      <img class="step4-path-illustration" src="../img/bg/road-copy.png" />
+      <img class="step4-img" src="../img/bg/step.png" style="width:19vw;" />
+      <p class="number4">4</p>
+      <img class="step4-archive" src="../img/bg/your-memory.png" style="width:44vw;" />
+      <p class="step4-text1">Your name and text written will be stored using json in the code for the website.
+It is not stored anywhere else, e.g. external hard-drive. Whilst on the website both name and memory input text are visible to other users.
+It will be deleted once the website is no longer live (maximum 6 months).
+You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
+</p>
+</div>
 
     <div class="end">
       <p class="end-text1">Thank you for using the memory booth, enjoy the journey!</P>
+
     </div>
   </div>
 
@@ -140,6 +179,16 @@
             <div class="button-text-light">About My Creators</div>
           </div>
         </a>
+      </li>
+
+      <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Feedback Quetionnaire</div>
+          <a>
       </li>
     </ul>
   </div>
