--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -45,7 +45,7 @@
 	<div class="container center-form">
 		<div class="row mx-auto text-center">
 			<div class="col-sm-12 col-xs-6 my-auto">
-				<img src="../img/heading/heading.png" style="height: 120px; background-color: transparent;" alt="" />
+				<img src="../img/heading/heading.png" style="height: 10vw; background-color: transparent;" alt="" />
 
 
 				<form action="your_memory.php" onsubmit="return checkForm()" method="post"
@@ -87,8 +87,8 @@
 					</span>
 
 					<div class="form-group">
-						<textarea class="form-control memory-content" name="memory" id="memory" rows="5"
-							placeholder="Write your memory here..."></textarea>
+		      <textarea class="form-control memory-content" name="memory" id="memory"
+							placeholder="Write your memory here..." style="height:15vw;"></textarea>
 						<span class="error">
 							<p id="memory_error"></p>
 						</span>
