--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -22,6 +22,7 @@
   <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
       
   <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
   <link rel="stylesheet" href="../css/read_me.css">
   <style>
