--- a/ui/menu.html
+++ b/ui/menu.html
@@ -26,53 +26,56 @@
 		</a>
 
 		<div class="menu-container">
-			<a href="memory_list.php">
-				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-							stroke="#ffffff90" />
-					</svg>
-					<div class="button-text-light">Memory Archive</div>
-				</div>
-			</a>
-			<a href="record_memory.html">
-				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-							stroke="#ffffff90" />
-					</svg>
-					<div class="button-text-light">Add My Memory</div>
-				</div>
-			</a>
-
-			<a href="read_me.html">
-				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-							stroke="#ffffff90" />
-					</svg>
-					<div class="button-text-light">Read Me</div>
-				</div>
-			</a>
-
-			<a href="about_us.html">
-				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-							stroke="#ffffff90" />
-					</svg>
-					<div class="button-text-light">About Us</div>
-				</div>
-			</a>
-			<a href="https://s1821826.typeform.com/to/OSFqSR">
-				<div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-					<svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-						<rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-							stroke="#ffffff90" />
-					</svg>
-					<div class="button-text-light">Feedback Quetionnaire</div>
-				</div>
-			</a>
+			 <li><a href="memory_list.php">
+          <div class="svg-wrapper-light" style="width:350px; margin-top: 120px;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Memory Archive</div>
+          </div>
+        </a>
+      </li>
+	  <li><a href="about_us.html">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">About My Creators</div>
+          </div>
+        </a>
+      </li>
+	  <li><a href="read_me.html">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Read Me</div>
+          </div>
+        </a>
+      </li>
+	    <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Feedback Quetionnaire</div>
+          <a>
+      </li>
+      <li>
+        <a href="record_memory.html">
+          <div class="svg-wrapper-light cyan" style="width:350px; margin: 50px 0 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Add Your Memories</div>
+          </div>
+        </a>
+      </li>
 		</div>
 	</div>
 
