--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -139,19 +139,8 @@ You can read our full privacy statement <a style="color:pink;" href="privacy-sta
           <img class="center" src="../img/heading/heading.png" style="width: 120%;" />
         </a>
       </li>
-      <li>
-        <a href="record_memory.html">
-          <div class="svg-wrapper-light cyan" style="width:350px; margin: 120px 0 50px 0;">
-            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-                stroke="#ffffff90" />
-            </svg>
-            <div class="button-text-light">Add Your Memories</div>
-          </div>
-        </a>
-      </li>
-      <li><a href="memory_list.php">
-          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+       <li><a href="memory_list.php">
+          <div class="svg-wrapper-light" style="width:350px; margin-top: 120px;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
@@ -160,18 +149,7 @@ You can read our full privacy statement <a style="color:pink;" href="privacy-sta
           </div>
         </a>
       </li>
-      <li><a href="read_me.html">
-          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
-            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
-              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
-                stroke="#ffffff90" />
-            </svg>
-            <div class="button-text-light">Read Me</div>
-          </div>
-        </a>
-      </li>
-
-      <li><a href="about_us.html">
+	  <li><a href="about_us.html">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -181,8 +159,17 @@ You can read our full privacy statement <a style="color:pink;" href="privacy-sta
           </div>
         </a>
       </li>
-
-      <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+	  <li><a href="read_me.html">
+          <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Read Me</div>
+          </div>
+        </a>
+      </li>
+	    <li><a href="https://s1821826.typeform.com/to/OSFqSR">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -190,6 +177,17 @@ You can read our full privacy statement <a style="color:pink;" href="privacy-sta
             </svg>
             <div class="button-text-light">Feedback Quetionnaire</div>
           <a>
+      </li>
+      <li>
+        <a href="record_memory.html">
+          <div class="svg-wrapper-light cyan" style="width:350px; margin: 50px 0 50px 0;">
+            <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
+              <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
+                stroke="#ffffff90" />
+            </svg>
+            <div class="button-text-light">Add Your Memories</div>
+          </div>
+        </a>
       </li>
     </ul>
   </div>
