updated all link to tab-icon
Moved tab-icon under bg folder, make sure the tab icon is the right one.

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+    gtag('config', 'G-T40QBMYD00');
+  </script>
 
   <meta charset="UTF-8">
   <title>About My Creators</title>
@@ -22,7 +22,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="icon" href="../img/tab-icon.png">
+  <link rel="icon" href="../img/bg/tab-icon.png">
 
   <!--Full page menu-->
   <link rel="stylesheet" href="../css/memory_list.css">
@@ -43,8 +43,10 @@
     <p class="member-content">
       Welcome to our open studio! We hope you enjoy the ride. For a step-by-step guide please go to the ‘Read Me’ page.
       <br /><br />
-      We are DMSP Preservation team 2020, studying a Digital Media Studio Project module at the Edinburgh College of Art.
-      We came together from a variety of visual, sonic, and digital design backgrounds to explore the theme of ‘Preservation’
+      We are DMSP Preservation team 2020, studying a Digital Media Studio Project module at the Edinburgh College of
+      Art.
+      We came together from a variety of visual, sonic, and digital design backgrounds to explore the theme of
+      ‘Preservation’
       in the digital age. From the outset we were fascinated by the process of memory and the role of dreaming in the
       formation of memory, and how much our memories are seemingly and endlessly recorded on social media platforms.
       We developed the character, IAIN, who is the interface of an hypothetical archive in the future and who features
@@ -53,14 +55,17 @@
 
     </p>
   </div>
-	<div class="sound-team">
-		<p>About Feedback Questuinnaire</p></div>
-	<div>
-		<p class="member-content">If you are interested in our website and would like to give us some feedback, let us know the direction of future progress, we will be very grateful！
-		<br /><br />
-			🌟Here is the URL of Questionnaire: <a style="color: pink;" href="https://s1821826.typeform.com/to/OSFqSR"> https://s1821826.typeform.com/to/OSFqSR</a>
-		</p>
-	</div>
+  <div class="sound-team">
+    <p>About Feedback Questuinnaire</p>
+  </div>
+  <div>
+    <p class="member-content">If you are interested in our website and would like to give us some feedback, let us know
+      the direction of future progress, we will be very grateful！
+      <br /><br />
+      🌟Here is the URL of Questionnaire: <a style="color: pink;" href="https://s1821826.typeform.com/to/OSFqSR">
+        https://s1821826.typeform.com/to/OSFqSR</a>
+    </p>
+  </div>
 
   <div class="member-photo">
     <p class="sound-team">Preservation Team</p>
@@ -135,10 +140,10 @@
       </figcaption>
     </figure>
 
-<br>
-<br>
-<br>
-<br>
+    <br>
+    <br>
+    <br>
+    <br>
 
   </div>
   <!--Full page menu begin-->
@@ -204,7 +209,7 @@
                 stroke="#ffffff90" />
             </svg>
             <div class="button-text-light">Feedback Quetionnaire</div>
-          <a>
+            <a>
       </li>
     </ul>
   </div>
