--- a/ui/choice.html
+++ b/ui/choice.html
@@ -3,14 +3,14 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+		gtag('config', 'G-T40QBMYD00');
+	</script>
 
 	<meta charset="UTF-8">
 	<meta charset="UTF-8">
@@ -18,7 +18,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Choice</title>
-	<link rel="icon" href="../img/tab-icon.png">
+	<link rel="icon" href="../img/bg/tab-icon.png">
 	<link rel="stylesheet" href="../css/style.css">
 	<link rel="stylesheet" href="../css/choice.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron">
@@ -63,12 +63,15 @@
 					<a href="save.php" style="text-decoration: none;">
 						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan)"
 							onclick="window.location.href = 'animation.html'">
-							<span><div class="button-text-light" style="top:2px; color:white" id="save">
-								Save</div></span>
+							<span>
+								<div class="button-text-light" style="top:2px; color:white" id="save">
+									Save</div>
+							</span>
 
 
-								<!-- <span class="tooltiptext">By saving you are agreeing for your name and memory to be saved to the database and be visible to other users.</span> -->
-								<div class="hover-text">By saving you are agreeing for your name and memory to be <br>saved to the database and be visible to other users</div>
+							<!-- <span class="tooltiptext">By saving you are agreeing for your name and memory to be saved to the database and be visible to other users.</span> -->
+							<div class="hover-text">By saving you are agreeing for your name and memory to be <br>saved
+								to the database and be visible to other users</div>
 
 						</div>
 					</a>
