--- a/ui/privacy-statement.html
+++ b/ui/privacy-statement.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+    gtag('config', 'G-T40QBMYD00');
+  </script>
 
   <meta charset="UTF-8">
   <title>Privacy Statement</title>
@@ -22,7 +22,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
-  <link rel="icon" href="../img/tab-icon.png">
+  <link rel="icon" href="../img/bg/tab-icon.png">
 
   <!--Full page menu-->
   <link rel="stylesheet" href="../css/memory_list.css">
@@ -42,9 +42,9 @@
   <div>
     <p class="member-content">
       🌟What information you collect and why
-      <br/><br/>
+      <br /><br />
       We are collecting names – not full names and false names can be given – and a brief summary of a memory
-      they have had by filling in the text box, and the category of the memory.  This is for the purposes of
+      they have had by filling in the text box, and the category of the memory. This is for the purposes of
       creating a digital/online archive experience as part of a project at Edinburgh College of Art, with the
       Digital Media Studio Project course, the data will only be used for the purposes of completing this coursework
       and won’t be published elsewhere. Part of the experience is that users can explore the memories of other
@@ -52,31 +52,40 @@
       their memory to the archive, however users are made aware of this during the process. We will also collect
       some information for the purposes of evaluating the website, but this will contain no personal data and so
       be anonymised and asks questions around user experience of the website.
-      <br/><br/>
+      <br /><br />
       🌟How the information you collect is used
-      <br/><br/>
+      <br /><br />
       The names and text will be stored on the website via json code. It will not be stored anywhere else. As above
       the information, e.g. a sample memory text, could be anonymised and used as part of final coursework submission
-      however this will remain confidential and within wider University of Edinburgh confidentiality and data guidelines.
-      This coursework will not be publicly available and all data will be deleted following 6 months of the website going live.
-      If you have any further questions about your data, removing your data prior to the 6 months, or you want to learn more
+      however this will remain confidential and within wider University of Edinburgh confidentiality and data
+      guidelines.
+      This coursework will not be publicly available and all data will be deleted following 6 months of the website
+      going live.
+      If you have any further questions about your data, removing your data prior to the 6 months, or you want to learn
+      more
       please email agnese.sile@ed.ac.uk.
-      <br/><br/>
+      <br /><br />
       🌟If you choose to save your memory
-      <br/><br/>
-      Your name and text written will be stored using json in the code for the website. It is not stored anywhere else, e.g.
+      <br /><br />
+      Your name and text written will be stored using json in the code for the website. It is not stored anywhere else,
+      e.g.
       external hard-drive. Whilst on the website both name and memory input text are visible to other users. We will not
       record names but may use the text from memories in further submissions and reports on the work which will remain
-      confidential within University of Edinburgh guidelines. It will be deleted once the website is no longer live, this
+      confidential within University of Edinburgh guidelines. It will be deleted once the website is no longer live,
+      this
       will be within a maximum period of 6 months from the website going live. You can request to have this data removed
-      sooner by emailing agnese.sile@ed.ac.uk. If you have any questions about how your data will be used please email and
+      sooner by emailing agnese.sile@ed.ac.uk. If you have any questions about how your data will be used please email
+      and
       you can withdraw consent and have data removed any time.
-      <br/><br/>
+      <br /><br />
       🌟If you choose to delete your memory
-      <br/><br/>
-      Your name and the text for your memory will not be stored anywhere on this website or on any other devices and will
-      not be visible to other users. Please contact agnese.sile@ed.ac.uk for further information on your data and how it is
+      <br /><br />
+      Your name and the text for your memory will not be stored anywhere on this website or on any other devices and
+      will
+      not be visible to other users. Please contact agnese.sile@ed.ac.uk for further information on your data and how it
+      is
       used on this website.
+      <br /><br /><br />
     </p>
   </div>
 
@@ -145,7 +154,7 @@
                 stroke="#ffffff90" />
             </svg>
             <div class="button-text-light">Feedback Quetionnaire</div>
-          <a>
+            <a>
       </li>
     </ul>
   </div>
