--- a/ui/record_memory.html
+++ b/ui/record_memory.html
@@ -3,18 +3,18 @@
 
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+		gtag('config', 'G-T40QBMYD00');
+	</script>
 
 	<meta charset="UTF-8">
 	<title>Add Your Memory - Memory Booth</title>
-	<link rel="icon" href="../img/tab-icon.png">
+	<link rel="icon" href="../img/bg/tab-icon.png">
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,7 +87,7 @@
 					</span>
 
 					<div class="form-group">
-		      <textarea class="form-control memory-content" name="memory" id="memory"
+						<textarea class="form-control memory-content" name="memory" id="memory"
 							placeholder="Write your memory here..." style="height:15vw;"></textarea>
 						<span class="error">
 							<p id="memory_error"></p>
