--- a/ui/delete.html
+++ b/ui/delete.html
@@ -3,18 +3,18 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+    gtag('config', 'G-T40QBMYD00');
+  </script>
 
   <meta charset="UTF-8">
   <title>Delete</title>
-  <link rel="icon" href="../img/tab-icon.png">
+  <link rel="icon" href="../img/bg/tab-icon.png">
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
