--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -3,14 +3,14 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+    gtag('config', 'G-T40QBMYD00');
+  </script>
 
   <meta charset="UTF-8">
   <title>Read Me</title>
@@ -18,9 +18,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    
   <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap.min.css">
-      
-  <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-      
+  <link rel="icon" href="../img/tab-icon.png">
+
+  <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>   
   <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
@@ -88,12 +88,14 @@
         <br>I interpret your memory as a string of ASCII characters, each of which has a corresponding integer number.
         <br>
         <br>Code -> Sound
-        <br>These numbers are then sent to a virtual synthesiser as MIDI data, and sonified as notes of a certain musical pitch.
+        <br>These numbers are then sent to a virtual synthesiser as MIDI data, and sonified as notes of a certain
+        musical pitch.
       </p>
 
       <img class="step2-camera" src="../img/bg/camera.png" style="width:40vw;" />
       <p class="step2-text2">Sound -> Visuals
-        <br>The waveform of the sound is then projected onto a circular pattern in my mind - with the colour scheme based on your category of memory.<br>
+        <br>The waveform of the sound is then projected onto a circular pattern in my mind - with the colour scheme
+        based on your category of memory.<br>
         <br>This audio-visual piece is completely unique to your memory.</p>
     </div>
 
@@ -103,7 +105,7 @@
       <p class="number3">3</p>
       <img class="step3-archive" src="../img/bg/archive.png" style="width:30vw;" />
       <p class="step3-text1">Once I have processed it, you will then be able to choose
-         whether you want me to preserve your memory or delete it.
+        whether you want me to preserve your memory or delete it.
         If you choose to save it, it will be added to my memory archive.
         You can then access your unique memory and explore other people’s
         memories in the archive any time.</p>
@@ -115,11 +117,12 @@
       <p class="number4">4</p>
       <img class="step4-archive" src="../img/bg/your-memory.png" style="width:44vw;" />
       <p class="step4-text1">Your name and text written will be stored using json in the code for the website.
-It is not stored anywhere else, e.g. external hard-drive. Whilst on the website both name and memory input text are visible to other users.
-It will be deleted once the website is no longer live (maximum 6 months).
-You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
-</p>
-</div>
+        It is not stored anywhere else, e.g. external hard-drive. Whilst on the website both name and memory input text
+        are visible to other users.
+        It will be deleted once the website is no longer live (maximum 6 months).
+        You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
+      </p>
+    </div>
 
     <div class="end">
       <p class="end-text1">Thank you for using the memory booth, enjoy the journey!</P>
@@ -189,23 +192,23 @@ You can read our full privacy statement <a style="color:pink;" href="privacy-sta
                 stroke="#ffffff90" />
             </svg>
             <div class="button-text-light">Feedback Quetionnaire</div>
-          <a>
+            <a>
       </li>
     </ul>
   </div>
 </body>
-  <!--Full page menu end-->
+<!--Full page menu end-->
 
-  <!--Full page menu-->
-  <script>
-    const ico = document.querySelector('.burger');
-    const fullMenu = document.querySelector('.full-menu');
+<!--Full page menu-->
+<script>
+  const ico = document.querySelector('.burger');
+  const fullMenu = document.querySelector('.full-menu');
 
-    ico.addEventListener('click', function () {
-      this.classList.toggle('is-active');
-      fullMenu.classList.toggle('is-active');
-    })
-  </script>
+  ico.addEventListener('click', function () {
+    this.classList.toggle('is-active');
+    fullMenu.classList.toggle('is-active');
+  })
+</script>
 
 </body>
 
