Questionnaire open in new tab

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -62,7 +62,8 @@
     <p class="member-content">If you are interested in our website and would like to give us some feedback, let us know
       the direction of future progress, we will be very grateful！
       <br /><br />
-      🌟Here is the URL of Questionnaire: <a style="color: pink;" href="https://s1821826.typeform.com/to/OSFqSR">
+      🌟Here is the URL of Questionnaire: <a target="_blank" style="color: pink;"
+        href="https://s1821826.typeform.com/to/OSFqSR">
         https://s1821826.typeform.com/to/OSFqSR</a>
     </p>
   </div>
@@ -189,7 +190,7 @@
           </div>
         </a>
       </li>
-      <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+      <li><a target="_blank" href="https://s1821826.typeform.com/to/OSFqSR">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
