--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -29,19 +29,23 @@
             <source src="../img/video/introduction.webm" type="video/webm">
             Your browser does not support HTML5 video.
         </video>
-        <a href="memory_list.php">
-            <!-- <button id="skipBtn" class="btn-control" onclick="Skip()"> -->
-            <button id="skipBtn" class="btn-control">
-                <span>Skip</span>
-                <svg id="svg-skip" t="1588198092968" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg" p-id="2820" width="24" height="24">
-                    <path
-                        d="M682.666667 540.458667L246.485333 831.232A21.333333 21.333333 0 0 1 213.333333 813.482667V210.517333a21.333333 21.333333 0 0 1 33.152-17.749333L682.666667 483.541333V213.333333a42.666667 42.666667 0 0 1 85.333333 0v597.333334a42.666667 42.666667 0 0 1-85.333333 0v-270.208z m-384-210.346667v363.776L571.477333 512 298.666667 330.112z"
-                        p-id="2821" fill="#ffffff">
-                    </path>
-                </svg>
-            </button>
-        </a>
+        <div class="btn-right">
+            <a href="memory_list.php">
+                <div id="skipBtn" class="btn-control">
+                    <span>Skip</span>
+                    <svg id="svg-skip" t="1588198092968" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                        xmlns="http://www.w3.org/2000/svg" p-id="2820" width="24" height="24">
+                        <path
+                            d="M682.666667 540.458667L246.485333 831.232A21.333333 21.333333 0 0 1 213.333333 813.482667V210.517333a21.333333 21.333333 0 0 1 33.152-17.749333L682.666667 483.541333V213.333333a42.666667 42.666667 0 0 1 85.333333 0v597.333334a42.666667 42.666667 0 0 1-85.333333 0v-270.208z m-384-210.346667v363.776L571.477333 512 298.666667 330.112z"
+                            p-id="2821" fill="#ffffff">
+                        </path>
+                    </svg>
+                </div>
+            </a>
+        </div>
+        <div class="btn-center">
+
+        </div>
     </div>
 
     <!-- <div class="content">
