--- a/ui/menu.html
+++ b/ui/menu.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<title>Menu</title>
+  <meta charset="UTF-8">
+  <title>Menu</title>
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,19 +14,19 @@
 
 <body class="body-common">
 
-	<div class="nav">
-		<a href="memory_list.php">
-			<img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
-		</a>
-	</div>
+  <div class="nav">
+    <a href="memory_list.php">
+      <img class="nav" src="../img/button/close.png" style="width: 30px;" alt="" />
+    </a>
+  </div>
 
-	<div class="flex-center">
-		<a href="menu.html">
-			<img src="../img/heading/heading.png" style="width: 500px" />
-		</a>
+  <div class="flex-center">
+    <a href="menu.html">
+      <img src="../img/heading/heading.png" style="width: 500px" />
+    </a>
 
-		<div class="menu-container">
-			 <li><a href="memory_list.php">
+    <div class="menu-container">
+      <li><a href="memory_list.php">
           <div class="svg-wrapper-light" style="width:350px; margin-top: 120px;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -36,7 +36,7 @@
           </div>
         </a>
       </li>
-	  <li><a href="about_us.html">
+      <li><a href="about_us.html">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -46,7 +46,7 @@
           </div>
         </a>
       </li>
-	  <li><a href="read_me.html">
+      <li><a href="read_me.html">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
@@ -56,14 +56,14 @@
           </div>
         </a>
       </li>
-	    <li><a href="https://s1821826.typeform.com/to/OSFqSR">
+      <li><a target="_blank" href="https://s1821826.typeform.com/to/OSFqSR">
           <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
             <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
               <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                 stroke="#ffffff90" />
             </svg>
             <div class="button-text-light">Feedback Quetionnaire</div>
-          <a>
+            <a>
       </li>
       <li>
         <a href="record_memory.html">
@@ -76,8 +76,8 @@
           </div>
         </a>
       </li>
-		</div>
-	</div>
+    </div>
+  </div>
 
 </body>
 
