--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-T40QBMYD00');
+    </script>
+
     <title>Introduction Video - Memory Booth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron" rel="stylesheet">
@@ -9,6 +19,10 @@
     <link rel="icon" href="../img/bg/tab-icon.png">
 
     <style>
+        body {
+            overflow: hidden;
+        }
+
         video {
             width: 100%;
             height: auto;
@@ -44,7 +58,11 @@
             </a>
         </div>
         <div class="btn-center">
-
+            <div class="svg-wrapper-light purple" id="btn-enter-archive" style="visibility: hidden;">
+                <a href="memory_list.php">
+                    <div class="button-text-light" style="top:5px; color:white">Enter Archive</div>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -54,6 +72,8 @@
 
     <script>
         var video = document.getElementById("myVideo");
+        var enterArchiveButton = document.getElementById("btn-enter-archive");
+        var skipBtn = document.getElementById("skipBtn");
         // var pausebtn = document.getElementById("pauseBtn");
         // var skipbtn = document.getElementById("skipBtn");
 
@@ -72,6 +92,11 @@
         //     video.currentTime = video.duration;
         //     pausebtn.innerHTML = "Play";
         // }
+
+        video.onended = function () {
+            enterArchiveButton.style.visibility = "visible";
+            skipBtn.style.visibility = "hidden";
+        };
     </script>
 
 </body>
