--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-T40QBMYD00');
+  </script>
+
   <meta charset="UTF-8">
   <title>Home - Memory Booth</title>
   <link rel="icon" href="../img/bg/tab-icon.png">
