Hover font size optimized

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -74,7 +74,7 @@
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
       <figcaption class="c4-layout-center-left">
-        <h1>Back-end development including the sonification process and data storage/retrieval.</h1>
+        <h1>Back-end development. Sonification process and data storage / retrieval.</h1>
       </figcaption>
     </figure>
 
