--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -143,7 +143,7 @@
               </a>
           </li>
           <li>
-              <a href="record_memory.hrml">
+              <a href="record_memory.html">
                   <div class="svg-wrapper-light cyan" style="width:350px; margin: 120px 0 50px 0;">
                       <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
                           <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
